tests/still-todo/should-fail/multi-port/illegal-patterns.fk
-- #desc   Use of illegal command pattern (see more in comments below)
-- #return something like "illegal command pattern"


interface Reader X = ask: X

constHandler: {<Reader Int, Reader Int>Int -> Int}
constHandler x = x
constHandler <ask.0 -> k> = constHandler (k 3)
constHandler <ask.2 -> k> = constHandler (k 7) -- <- This pattern should be illegal

myreader: {[Reader Int, Reader Int]Int}
myreader! = ask! + (<-Reader> ask!)

main: {[Console]Int}
main! = constHandler myreader!
